still no success on getting server to no be refused

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,8 @@
 <li>
-	{{name}}
+	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newsleep="{{devoured}}">
+	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
 		{{#if devoured}}OM NOM NOM!{{else}}Burger Created!{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 </li>
