went through all files to fixe minor errors

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<<h1>Create and "Eat" to your Heart's Desire</h1>
+<<h1>Create and "Eat" to your Heart's Content</h1>
 
 <h2>Options</h2>
 
@@ -14,7 +14,7 @@
 
 <ul>
   {{#each burgers}}
-    {{#if devoured}}
+    {{#if\\ devoured}}
       {{> burgers/burger-block devoured=false}}
     {{/if}}
   {{/each}}
