--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
 
 <ul>
   {{#each burgers}}
-    {{#if\\ devoured}}
+    {{#if devoured}}
       {{> burgers/burger-block devoured=false}}
     {{/if}}
   {{/each}}
