--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
+	<button class="change-devoured" data-id="{{id}}" data-newDevoured="{{devoured}}">
 		{{#if devoured}}OM NOM NOM!{{else}}Burger Created!{{/if}}
 	</button>
 
