--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{burger_name}}
 
 	<button class="change-devoured" data-id="{{id}}" data-newDevoured="{{devoured}}">
-		{{#if devoured}}OM NOM NOM!{{else}}Burger Created!{{/if}}
+		{{#if devoured}}Eat It{{else}}Create It{{/if}}
 	</button>
 
 </li>
